rename sample output files
Enyo-DCO-1.1-Signed-off-by: Ryan Duffy (ryan.duffy@lge.com)

--- a/samples/src/package.json
+++ b/samples/src/package.json
@@ -3,6 +3,8 @@
   "libPath": "../../../",
   "outdir": "../",
   "title": "Onyx Samples",
+  "outCssFile": "samples.css",
+  "outJsFile": "samples.js",
   "style": [
     "*.css",
     "*.less"
