--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/enyojs/onyx.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "homepage": "https://github.com/enyojs/onyx",
   "devDependencies": {
     "gulp": "^3.8.11",
