--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/enyojs/onyx",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-jshint": "^1.10.0",
-    "jshint-stylish": "^1.0.1"
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.9.1",
+    "jshint-stylish": "^2.1.0"
   }
 }
