--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "moduleDir": "src",
-  "version": "1.0.0",
+  "version": "2.6.0-rc.2",
   "optionalLibs": [
     "enyo-ilib"
   ],
