--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "moduleDir": "src",
-  "version": "2.6.1-pre.6",
+  "version": "2.7.0-rc.1",
   "optionalLibs": [
     "enyo-ilib"
   ],
