--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "moduleDir": "src",
-  "version": "2.6.3-rc.8",
+  "version": "2.6.3-rc.9.s",
   "optionalLibs": [
     "enyo-ilib"
   ],
